--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Poppins;
     list-style: none;
     box-sizing: border-box;
 }
@@ -31,15 +33,9 @@ a {
     font-weight: 600;
 }
 
-#logop {
-    color: #fff;
-    font-size: 38px;
-    font-weight: bold;
-}
-
 #logo {
   color: #fff;
-  font-size: 28px;
+  font-size: 25px;
   font-weight: bold;
 }
 
@@ -48,13 +44,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 65px;
+    height: 85px;
     padding: 25px;
-}
-
-.hea {
-  background: #8d1010;
-  border-radius: 50%;
 }
 
 #menu {
@@ -64,7 +55,8 @@ a {
 
 #menu a {
     display: block;
-    padding: 10px;
+    padding: 8px 10px;
+    font-size: 17px;
 }
 
 #btn-mob {
@@ -75,45 +67,21 @@ a {
 .hidden {
   opacity: 0;
   filter: blur(15px);
-  transform: translateX(-100%);
+  transform: translateY(-100%);
   transition: all 1s;
 }
 
 .show {
   opacity: 1;
   filter: blur(0);
-  transform: translateX(0);
+  transform: translateY(0);
   transition: all 1s;
 }
 /* fim reveal */
 
-/* Estilo do botão de voltar ao topo */
-.back-to-top {
-  position: fixed;
-  bottom: 30px;  /* Distância do botão do rodapé */
-  right: 30px;   /* Distância do botão da borda direita */
-  background-color: #8d1010;
-  color: white;
-  border: none;
-  padding: 15px 20px;
-  font-size: 20px;
-  font-weight: 800;
-  border-radius: 50%;
-  display: none;  /* Começa oculto */
-  cursor: pointer;
-  z-index: 1000;  /* Garantir que fique sobre outros elementos */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease-in-out;
-}
-
-.back-to-top:active {
-  transform: scale(0.9); /* Efeito de clique */
-}
-
-
 /*page-home*/
 #page-home {
-  background: rgba(0, 0, 0, 0.7) url(img/background-nega.jpg);
+  background: rgba(0, 0, 0, 0.7) url(img/background.jpg);
   background-blend-mode: darken;
   width: 100%;
   height: 80vh;
@@ -126,172 +94,163 @@ a {
   text-align: center;
 }
   
-  #page-home h2 {
-    color: #fff;
-    background: #11111144;
-    padding: 12px;
-    border-radius: 10px;
-    font-size: 50px;
-  }
+#page-home p {
+  color: #fff;
+  width: 50%;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  padding-top: 25px;
+}
   
-  #page-home p {
-    color: #fff;
-    width: 50%;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 20px;
-    padding-top: 25px;
-  }
+#page-home .span-surpresa {
+  color: #8d1010;
+}
   
-  #page-home .span-surpresa {
-    color: #8d1010;
-  }
+#page-home a {
+  font-size: 16px;
+  padding: 15px 30px;
+  margin: 5px;
+  border-radius: 8px;
+  font-weight: 600;
+}
   
-  #page-home .btn {
-    margin-top: 35px;
-  }
+/*sidenav*/
+.sidenav {
+  background: #e7e7e7;
+  padding: 25px;
+  overflow-x: auto;
+}
   
-  #page-home a {
-    font-size: 16px;
-    padding: 15px 30px;
-    margin: 5px;
-    border-radius: 8px;
-    font-weight: 600;
-  }
+.sidenav ul {
+  display: flex;
+}
   
-  /*sidenav*/
-  .sidenav {
-    background: #e7e7e7;
-    padding: 25px;
-    overflow-x: auto;
-  }
+.sidenav li a {
+  display: block;
+  min-width: 200px;
+  max-width: 250px;
+  margin: 0 auto 30px auto;
+  padding: 15px;
+  margin: 30px 30px 30px 0;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px 0 #5e5e5e;
+  transition: .2s ease-out;
+}
   
-  .sidenav ul {
-    display: flex;
-  }
+.sidenav li a:hover {
+  background: #ebebeb;
+}
   
-  .sidenav li a {
-    display: block;
-    min-width: 200px;
-    max-width: 250px;
-    margin: 0 auto 30px auto;
-    padding: 15px;
-    margin: 30px 30px 30px 0;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px 0 #5e5e5e;
-    transition: .2s ease-out;
-  }
+.sidenav ul li a img {
+  max-width: 100%;
+  border-radius: 5px;
+  filter: brightness(0.8);
+}
+/*fim sidenav*/
   
-  .sidenav li a:hover {
-    background: #ebebeb;
-  }
+/*sobre*/
+#page-comeco {
+  padding: 30px 20px;
+  text-align: center;
+}
   
-  .sidenav ul li a img {
-    max-width: 100%;
-    border-radius: 5px;
-    filter: brightness(0.8);
-  }
-  /*fim sidenav*/
+#page-comeco .comeco-base {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 50px;
+}
   
-  /*sobre*/
-  #sobre-home {
-    padding: 30px 20px;
-    text-align: center;
-  }
+#page-comeco .comeco-box {
+  background: #e7e7e7;
+  text-align: start;
+  padding: 15px 10px 15px 10px;
+  border-radius: 10px;
+}
   
-  #sobre-home .home-base {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-top: 50px;
-  }
+#page-comeco .comeco-box h3 {
+  color: #111;
+  font-size: 22px;
+  font-weight: 600;
+  padding-top: 10px;
+  text-align: center;
+}
   
-  #sobre-home .home-box {
-    background: #e7e7e7;
-    text-align: start;
-    padding: 15px 10px 15px 10px;
-    border-radius: 10px;
-  }
-  
-  #sobre-home .home-box h3 {
-    color: #111;
-    font-size: 22px;
-    font-weight: 600;
-    padding-top: 10px;
-    text-align: center;
-  }
-  
-  #sobre-home .home-box p {
-    color: #111;
-    font-size: 16px;
-    font-weight: 400;
-    padding-top: 15px;
-  }
-  /* fim sobre */
+#page-comeco .comeco-box p {
+  color: #111;
+  font-size: 16px;
+  font-weight: 400;
+  padding-top: 15px;
+  text-align: center  ;
+}
+/* fim sobre */
 
-  /* fim page home */
+/* fim page home */
 
-  /* page mapa */
-  #page-mapa {
-    background-image: url(img/background-mapa.png);
-    width: 100%;
-    height: 80vh;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+/* page mapa */
+#page-lov {
+  background: rgba(0, 0, 0, 0.7) url(img/sidenav/roseira.jpg);
+  background-blend-mode: darken;
+  width: 100%;
+  height: 80vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
-  #page-mapa h2 {
-    color: #fff;
-    font-size: 40px;
-  }
+#page-lov h2 {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 700;
+}
 
-  #sobre-mapa {
-    padding: 30px 20px;
-    text-align: center;
-  }
+#sobre-mapa {
+  padding: 30px 20px;
+  text-align: center;
+}
 
-  #sobre-mapa p {
-    padding-top: 10px;
-  }
+#sobre-mapa p {
+  padding-top: 10px;
+}
 
-  #sobre-mapa .mapa-base {
-    display: grid;
-    gap: 20px;
-    margin-top: 50px;
-  }
+#sobre-mapa .mapa-base {
+  display: grid;
+  gap: 20px;
+  margin-top: 50px;
+}
   
-  #sobre-mapa .mapa-box {
-    background: #e7e7e7;
-    text-align: start;
-    padding: 15px 10px 15px 10px;
-    border-radius: 10px;
-  }
+#sobre-mapa .mapa-box {
+  background: #e7e7e7;
+  text-align: start;
+  padding: 15px 10px 15px 10px;
+  border-radius: 10px;
+}
   
-  #sobre-mapa .mapa-box i {
-    font-size: 20px;
-    color: #483d8b;
-  }
+#sobre-mapa .mapa-box i {
+  font-size: 20px;
+  color: #483d8b;
+}
   
-  #sobre-mapa .mapa-box h3 {
-    color: #111;
-    font-size: 22px;
-    font-weight: 600;
-    padding-top: 10px;
-    text-align: center;
-  }
+#sobre-mapa .mapa-box h3 {
+  color: #111;
+  font-size: 22px;
+  font-weight: 600;
+  padding-top: 10px;
+  text-align: center;
+}
   
-  #sobre-mapa .mapa-box p {
-    color: #111;
-    font-size: 16px;
-    font-weight: 400;
-    padding-top: 15px;
-    text-align: center;
-  }
+#sobre-mapa .mapa-box p {
+  color: #111;
+  font-size: 16px;
+  font-weight: 400;
+  padding-top: 15px;
+  text-align: center;
+}
   /* fim page mapa */
 
 /*footer*/
@@ -314,17 +273,10 @@ a {
 	grid-area: fot2;
 }
 
-.fot3 {
-	grid-area: fot3;
-}
-
-.fot4 {
-	grid-area: fot4;
-}
-
 .footer {
 	grid-template-areas:
-		"fot1 fot2 fot3 fot4";
+		"fot1 fot2"
+    "fot3 fot4";
     gap: 2px;
     padding: 8px;
 }
@@ -342,12 +294,11 @@ a {
 
 .fot {
 	margin: 0 auto;
-	border-top: 8px solid #8d1010;
 }
 /*fim footer*/
 
 /* responsividade */
-@media (max-width: 699px) {
+@media (max-width: 1200px) {
   * {
     scrollbar-width: none;
   }
@@ -369,7 +320,7 @@ a {
         position: absolute;
         width: 90%;
         height: 0;
-        top: 75px;
+        top: 95px;
         right: 5%;
         background: #1f1f1f;
         transition: .5s;
@@ -396,13 +347,14 @@ a {
     
 
     #nav.active #menu {
-        height: 25vh;
+        height: 35vh;
         visibility: visible;
         overflow-y: auto;
     }
 
     #menu a {
         color: #fff;
+        font-size: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -461,18 +413,17 @@ a {
     /* fim menu */
 
     /* page home */
-    #page-home h2 {
-      background: transparent;
-      font-size: 45px;
-    }
-
     #page-home p {
-      width: 70%;
-      font-size: 20px;
-      line-height: 20px;
+      width: 80%;
+      font-size: 30px;
+      line-height: 28px;
       padding-top: 25px;
     }
     /* fim page home */
+
+    /* page lov */
+
+    /* fim page lov */
 
     /* footer */
     .footer {
@@ -481,6 +432,10 @@ a {
       "fot3 fot4";
       gap: 2px;
       padding: 9px;
+  }
+
+  .item {
+    font-size: 16px;
   }
     /* fim footer */
 }
